Fix white space right side mobile

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+
+html, body {
+  overflow-x: hidden;
+}
+
 /* img carousel */
 .popular-dishes {
   height: 5rem;
